Table users {
  id int [pk, increment]
  email varchar(250) [not null, unique]
  role varchar(50) [not null]
  password varchar(250) [not null]
  first_name varchar(250) [not null]
  last_name varchar(250) [not null]
}

Table user_phones {
  id int [pk, increment]
  user_id int [not null, ref: > users.id]
  phone varchar(50) [not null]

  indexes {
    (user_id)
    (phone) [unique]
  }
}

Table products {
  id int [pk, increment]
  name varchar(250) [not null]
  price decimal(10,2) [not null]
  stock int [not null]
  is_deleted boolean [not null, default: false]
  user_id int [not null, ref: > users.id]

  indexes {
    (user_id)
  }
}
